# slmn

./: .gitignore  MANIFEST.in  README.md  apilist.txt  cli.html  cli.html.md  dead_drop.html  dead_drop.html.md  index.html  index.html.md  llms-ctx-full.txt  llms-ctx.txt  mcp.html  mcp.html.md  misc.html  misc.html.md  nbtools.html  nbtools.html.md  publish.html  publish.html.md  pyproject.toml  remote.html  remote.html.md  robots.txt  search.json  sitemap.xml  styles.css
nbs/: 00_cli.ipynb  01_nbtools.ipynb  02_remote.ipynb  03_mcp.ipynb  04_misc.ipynb  05_dead_drop.ipynb  06_publish.ipynb  _quarto.yml  darktheme.scss  index.ipynb  llms.txt  nbdev.yml  sidebar.yml  theme-toggle.html
site_libs/bootstrap/: bootstrap-a3f9da43542dd30c35aa4b7c36df65ab.min.css  bootstrap-dark-7247094fb68a67e16958fbcda6a3bc2e.min.css
slmn/: _modidx.py  cli.py  core.py  dead_drop.py  mcp.py  misc.py  nbtools.py  publish.py  remote.py
slmn/scripts/: remote_launch.sh  remote_smoke.sh  remote_status.sh
slmn/skills/write-project-docs/: SKILL.md
