[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "slmn"
dynamic = ["version"]
description = "Scott's Language Model Nest: sundry utils + MCP "
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Scott H. Hawley", email = "scott@scotthawley.com"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["nbformat", "pymupdf", "fastcore", "httpx"]

[project.optional-dependencies]
mcp = ["fastmcp"]
# The reusable CI workflow (answerdotai/workflows/nbdev3-ci) hardcodes `pip install -e ".[dev]"` --
# not configurable via inputs -- so `dev` needs to cover everything the test suite touches,
# including the MCP notebook. Mirrors `mcp` for now; can grow independently later if CI needs
# something `mcp` installs don't (e.g. test-only tooling).
dev = ["fastmcp"]

[project.urls]
Repository = "https://github.com/drscotthawley/slmn"
Documentation = "https://drscotthawley.github.io/slmn/"

[project.scripts]
slmn = "slmn.cli:main"
slmn-mcp = "slmn.mcp:main"

[project.entry-points.nbdev]
slmn = "slmn._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "slmn.__version__"}

[tool.setuptools.packages.find]
include = ["slmn"]

[tool.nbdev]
