[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "slmn"
dynamic = ["version"]
description = "Slammin' Language Model Nest: sundry utils + MCP "
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Scott H. Hawley", email = "scott@scotthawley.com"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["nbformat", "pymupdf", "fastcore", "httpx"]

[project.optional-dependencies]
mcp = ["fastmcp"]
# Both reusable workflows hardcode `pip install -e ".[dev]"` (not configurable via inputs):
# nbdev3-ci for tests and quarto-ghp3 for the docs deploy. So `dev` must cover everything the
# test suite touches (the MCP notebook -> fastmcp) AND everything the docs build touches: the
# _quarto.yml pre/post-render hooks that generate llms.txt (pysym2md -> apilist.txt,
# llms-txt -> llms-ctx*.txt). Grows independently of `mcp` as those needs diverge.
dev = ["fastmcp", "pysym2md", "llms-txt"]

[project.urls]
Repository = "https://github.com/drscotthawley/slmn"
Documentation = "https://drscotthawley.github.io/slmn/"

[project.scripts]
slmn = "slmn.cli:main"
slmn-mcp = "slmn.mcp:main"

[project.entry-points.nbdev]
slmn = "slmn._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "slmn.__version__"}

[tool.setuptools.packages.find]
include = ["slmn"]

[tool.setuptools.package-data]
slmn = ["scripts/*.sh", "skills/*/*.md"]

[tool.nbdev]
